[package]
name = "rust-network-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
local-ip-address = "0.6"
surge-ping = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "scanner"
path = "src/cmd/scanner/main.rs"